<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jens.sudokuprosjekt.MainActivity"
    android:orientation="vertical"
    android:layout_marginLeft="20sp"
    android:layout_marginRight="20sp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittel"
        android:gravity="center"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        android:textColor="#000"
        android:textScaleX="1.3"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fortsKnapp"
        android:id="@+id/fortsKnapp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nyKnapp"
        android:id="@+id/nyKnapp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lagKnapp"
        android:id="@+id/lagKnapp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/optKnapp"
        android:text="@string/optKnapp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hjelpKnapp"
        android:text="@string/hjelpKnapp"/>
</LinearLayout>
